--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,21 @@
 {
-  "extends": "astro/tsconfigs/strict"
+  "extends": "astro/tsconfigs/strict",
+  "compilerOptions":{
+    "baseUrl":".",
+    "paths":{
+      "@/*":["src/*"],
+      "@/components":[
+        "src/components/*"
+      ],
+      "@/pages":[
+        "src/pages/*"
+      ],
+      "@/icons":[
+        "src/icons/*"
+      ],
+      "@/lib":[
+        "src/lib/*"
+      ]
+    }
+  }
 }
